awa/style.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	/*font: inherit;*/
	vertical-align: baseline;
	font-family: 'Raleway', sans-serif;
	line-height:1.5;
	-webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/*Global Flex Class*/
.flex-parent {
    display:flex;
    justify-content: center;
    align-items: center;
    align-content: center;
    flex-direction: column;
}

.video {
    width: 100vw;
    height: 100vh;
    display: flex;
    align-items: center;
		pointer-events: none; !important
}

.video video {
    object-fit: cover;
    min-width: 100%;
    min-height: 100%;
}

/*Header and small paragraph on top of Video*/
.video .video-text {
    position:absolute;
    width:100%
}

.video .video-text h1{
    font-family: "Poppins", Sans-Serif;
    font-size:55px;
    color:white;
    text-align:center;
}

.video .video-text p {
    font-family: "Roboto", Sans-Serif;
    font-size:29px;
    color:white;
    text-align:center;
    max-width:650px;
}

@media only screen and (max-width: 768px) {
    .video, video {
        /*height: 50vh;*/

    }

    .mid-sec .text-card h1 {
        font-size:8vw;
        margin-top:2rem;
    }

    .mid-sec .text-card p {
        max-width:90vw;
    }

    footer {
        flex-direction: column;
    }

}

.text-card {
    font-family: "Raleway", sans-serif;
    display:flex;
    justify-content: space-evenly;
    align-items: center;
    align-content: center;
    flex-direction: row;
    flex-wrap:wrap;
    width: 100vw;
    min-height:60vh;
    /*background-color: #f7f7f7;*/
}

.text-card h1 {
    font-size: 55px;
    font-weight: 200;
    max-width: 400px;
    color: #111111;
    text-align:center;
}

.mid-sec .text-card p {
    padding:55px;
    font-weight: 400;
    max-width:50vw;
    font-size: 23px;
    color: #AAAAAA;
    /*line-height:1.5;*/
}

/*The blue info-card*/
.info-card {
    max-width:320px;
    background-color:#1E1F2E;
    color:white;
    padding:20px;
    font-family: "Raleway", Sans-Serif;
    font-weight:300;
    font-size:22px;
    z-index:100;
}

.info-div {
    display:flex;
    align-items: center;

    background-image: url('https://images.unsplash.com/photo-1526056567064-acb5c538b488?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto');
    background-position: center;
    background-size: cover;
    min-height:35rem;
    padding:4rem;

}

.info-div:nth-child(2) {
    background-image: url('https://images.unsplash.com/photo-1526241293825-22718a4c8f97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto');
}

/*Vertical line, line to separate the header and the paragraph*/
.vl {
  border-left: 1px solid grey;
  height: 6em;
}

